edits in team members

--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                 <div class="facility-col">
                     <img src="images/sehaj2.png">
                     <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span><br><br>[Logistics & Admin]</span></p>
+                    <p>Joint General Secretary <span><br><br>[Logistics & Administration]</span></p>
                 </div>
             </div>
             <div class="row5">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="facility-col">
                     <img src="images/tanya.png">
-                    <h3>Sehaj Bhalla</h3>
+                    <h3>Tanya Kulkarni</h3>
                     <p>Joint General Secretary <span><br><br>[Editorial & Public Relations]</span></p>
                 </div>
             </div>
