--- a/team.html
+++ b/team.html
@@ -95,7 +95,7 @@
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
+                    <img src="images/rachnafinal.png">
                     <h3>Rachna Shetty</h3>
                     <p>Joint General Secretary <span><br><br>[Technicals]</span></p>
                 </div>
@@ -107,12 +107,12 @@
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/Madhavi Thanvi_Lady Representative .JPG">
+                    <img src="images/madhvifina.png">
                     <h3>Madhavi Thanvi</h3>
                     <p>Lady Representative</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/tanya.png">
+                    <img src="images/tanyafinal.png">
                     <h3>Tanya Kulkarni</h3>
                     <p>Joint General Secretary <span><br><br>[Editorial & Public Relations]</span></p>
                 </div>
