--- a/about.html
+++ b/about.html
@@ -86,6 +86,26 @@
             </div>
         </div>
 </section>
+<section class="campus1">
+
+    <div class="row5">
+        <div class="campus-col1">
+            <img src="images/editorial 2.png">
+            <a href="fineartcomms.html">
+                <div class="layer1">
+                <h3>Fine Arts</h3>
+                </div>
+            </a>
+        </div>
+        <div class="campus-col1">
+            <img src="images/women.png">
+            <a href="ed.html">
+            <div class="layer1">
+                <h3>Women Empowerment</h3>
+            </div>
+            </a>
+        </div>
+</section>
 
     
 <!-------- footer ---------->
