--- a/editorialcomms.html
+++ b/editorialcomms.html
@@ -29,85 +29,35 @@
     
 <!------- about us content -------->
 <section class="campus1">
-    <h1>Committees Categorised</h1>
-    <p>All Student bodies</p>
+    <h1>Students’ Council Bodies</h1>
+    <p>Committees</p>
         <div class="row5">
             <div class="campus-col1">
-                <img src="images/technicals.png">
-                <a href="technicalcomms.html">
-                <div class="layer1">
-                    <h3>Technical Committees</h3>
-                </div>
-                </a>
-            </div>
-            <div class="campus-col1">
-                <img src="images/finance.png">
-                <a href="financecomms.html">
-                <div class="layer1">
-                    <h3>Finance Committees</h3>
-                </div>
-                </a>
-            </div>
-            <div class="campus-col1">
-                <img src="images/social.png">
-                <a href="socialworkcomms.html">
-                <div class="layer1">
-                    <h3>Social Work</h3>
-                </div>
-                </a>
-        </div>
-</section>
-<section class="campus1">
-
-        <div class="row5">
-            <div class="campus-col1">
-                <img src="images/arts.png">
-                <a href="fineartcomms.html">
-                    <div class="layer1">
-                    <h3>Fine Arts</h3>
-                    </div>
-                </a>
-            </div>
-            <div class="campus-col1">
-                <img src="images/women.png">
+                <img src="images/ed.png">
                 <a href="ed.html">
                 <div class="layer1">
-                    <h3>Women Empowerment</h3>
+                    <h3>Editorial Board</h3>
                 </div>
                 </a>
             </div>
             <div class="campus-col1">
-                <img src="images/researching.png">
-                <a href="cq.html">
+                <img src="images/findrome.png">
+                <a href="Findrome.html">
                 <div class="layer1">
-                    <h3>Research Committees</h3>
+                    <h3>Findrome</h3>
                 </div>
                 </a>
             </div>
-        </div>
-</section>
-<section class="campus1">
-
-    <div class="row5">
-        <div class="campus-col1">
-            <img src="images/editorial 2.png">
-            <a href="editorialcomms.html">
+            <div class="campus-col1">
+                <img src="images/iet.png">
+                <a href="iet.html">
                 <div class="layer1">
-                <h3>Fine Arts</h3>
+                    <h3>IET</h3>
                 </div>
-            </a>
-        </div>
-        <div class="campus-col1">
-            <img src="images/women.png">
-            <a href="ed.html">
-            <div class="layer1">
-                <h3>Women Empowerment</h3>
-            </div>
-            </a>
+                </a>
         </div>
 </section>
 
-    
 <!-------- footer ---------->
 
 <section class="footer">
