--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             <img src="images/editorial 2.png">
             <a href="editorialcomms.html">
                 <div class="layer1">
-                <h3>Fine Arts</h3>
+                <h3>Editorial/Literature</h3>
                 </div>
             </a>
         </div>
