--- a/editorialcomms.html
+++ b/editorialcomms.html
@@ -33,7 +33,7 @@
     <p>Committees</p>
         <div class="row5">
             <div class="campus-col1">
-                <img src="images/ed.png">
+                <img src="images/edboard.png">
                 <a href="ed.html">
                 <div class="layer1">
                     <h3>Editorial Board</h3>
