--- a/sattva.html
+++ b/sattva.html
@@ -31,11 +31,12 @@
     <section class="about-us1">
         <div class="row">
             <div class="about-col1">
-                <h1>RoboCon</h1>     
-                <p>The Technical Committee is the tech and digital arm of the Students' Council. We're the ones who provide experience of excitement, enthusiasm, and a platform to showcase one’s skills. From industrial visits to internship fairs, we strive for the holistic development of our members and event participants. Tech Comm is for those that want a head start in their engineering journey by developing their technical aptitude.</p>
+                <h1>The ANNUAL Cultural Festival</h1>     
+                <p>Sattva, MPSTME's annual cultural festival is a remarkable celebration of fervour and creativity in its purest forms. Sattva at its heart is based on the principle of providing people the opportunity of a lifetime with memories and experiences that last forever. It offers a platform for people who believe in making dreams come true, for people who believe, sky's the limit.
+                </p>
                 <h1>Flagship Events</h1>     
-                <p>Taqneeq, MPSTME’s Annual Technical Fest is a three-day celebration of technology with a rich history that witnesses a greater footfall every passing year. It is a technological marvel which provides dreamers and believers with a stage to hone their passions and not just limit themselves to bookish knowledge. With its precursor, the Tech Carnival, Taqneeq is fast becoming the paradigm of how a technical fest should be, and it is technology in its purest form.<br>
-                    The internship fair serves to bring together companies willing to provide an opportunity for budding engineers. The fair will provide students with much-needed industry experience to propel themselves in their technical endeavours. Apart from gaining adequate exposure to the latest technologies, they will learn how to work with a team, build interpersonal skills and manage time.
+                <p>The three day fest comprises of a pro-night, one DJ/band night and distinct events such as Cyclathon, events from Sports like Box Cricket, Football 5V5, Valorant, Rocket League  and Fifa’22,  Informals events of Mr and Ms. Sattva, Vice City launch, parde ke peeche kya hai,  and be the detective,  Performing Arts events of Standup Comedy, Beatboxing, Western Solo Dance, Group Dance, Short Films, Classical Solo Dance, Monologue, Stand-up Comedy and Rap Battle, Management events like Sitcom exchange, Change my mind, shark tank, Jam and Pick your sole, Socials events of A day at Sattva, Sattva’s got talent, Movie screening, Tshirt painting and Donation drive, Workshops like Dance workshop, Market yourself, Health and Lifestyle workshop and Fitness Workshop, among others. SATTVA ‘22 was graced by the presence of many prominent artists such as Tusshar Kapoor, Funcho, King, cast of Kashmir Files and rock band Sabali. MPSTME was the first in Mumbai to organise an offline fest shortly after the COVID-19 pandemic, even after multiple restrictions that were imposed. Some other renowned celebrities to be a part of Sattva in the past include, Aditya Roy Kapoor, Disha Paatni, Kailash Kher and Zakhir Khan.
+
                 </p>
                 <a href="" class="hero-btn red-btn">Register for Executive</a>
             </div>
@@ -50,19 +51,19 @@
             <div class="row">
                 <div class="campus-col">
                     <img src="images/london.png">
-                    <div class="layer">
+                    <div class="layer1">
                         <h3>Concerts</h3>
                     </div>
                 </div>
                 <div class="campus-col">
                     <img src="images/newyork.png">
-                    <div class="layer">
+                    <div class="layer1">
                         <h3>Performing Arts</h3>
                     </div>
                 </div>
                 <div class="campus-col">
                     <img src="images/washington.png">
-                    <div class="layer">
+                    <div class="layer1">
                         <h3>Informals</h3>
                     </div>
                 </div>
