--- a/index.html
+++ b/index.html
@@ -71,49 +71,32 @@
                     </a>
             </div>
 
-    </section>
-    <section class="facility">
-        <h1>Our Facilities</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    
-    <section class="about-us">
-        <div class="row">
-            <div class="about-col">
-                <h1>Canteen</h1>     
-            </div>
-            <div class="about-col">
-                <img src="images/banner2.jpg">
-            </div>
-        </div>    
-    </section>
-    <section class="about-us">
-        <div class="row">
-            <div class="about-col">
-                <h1>Boys Lounge</h1>     
-            </div>
-            <div class="about-col">
-                <img src="images/boys.jpg">
-            </div>
-        </div>    
-    </section>
-    <section class="about-us">
-        <div class="row">
-            <div class="about-col">
-                <h1>Library</h1>     
-            </div>
-            <div class="about-col">
-                <img src="images/library.jpg">
-            </div>
-        </div>    
+  
     </section>
     <section class="campus">
-        <h1>Events At Sattva</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h1>Hangout Spots</h1>
+
             <div class="row6">
                 <div class="campus-col1">
                     <img src="images/banner2.jpg">
                     <div class="layer1">
-                        <h3>Concerts</h3>
+                        <h3>Canteen</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row6">
+                <div class="campus-col1">
+                    <img src="images/boys.jpg">
+                    <div class="layer1">
+                        <h3>Boys Lounge</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row6">
+                <div class="campus-col1">
+                    <img src="images/library.jpg">
+                    <div class="layer1">
+                        <h3>Library</h3>
                     </div>
                 </div>
             </div>
