--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             </div>
             <div class="campus-col1">
                 <img src="images/researching.png">
-                <a href="cq.html">
+                <a href="researchcomms.html">
                 <div class="layer1">
                     <h3>Research Committees</h3>
                 </div>
