--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             </div>
             <div class="campus-col1">
                 <img src="images/women.png">
-                <a href="ed.html">
+                <a href="womenempowermerntcomms.html">
                 <div class="layer1">
                     <h3>Women Empowerment</h3>
                 </div>
