voices final update

--- a/voices.html
+++ b/voices.html
@@ -56,7 +56,7 @@
                 <div class="facility-col">
                     <img src="images/madhvifina.png">
                     <h3>Madhavi Thanvi</h3>
-                    <p>General Secretary</p>
+                    <p>Lady Representative</p>
                 </div>
     </section>
 <!-------- footer ---------->
