image update to comms

--- a/about.html
+++ b/about.html
@@ -98,10 +98,10 @@
             </a>
         </div>
         <div class="campus-col1">
-            <img src="images/women.png">
-            <a href="ed.html">
+            <img src="images/sportcomms-modified.png">
+            <a href="sportcomms.html">
             <div class="layer1">
-                <h3>Women Empowerment</h3>
+                <h3>Sport Committees</h3>
             </div>
             </a>
         </div>
