--- a/cq.html
+++ b/cq.html
@@ -54,39 +54,34 @@
         <p>Supercore paving the pathway for the student council</p>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
-                </div>
-                <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
+                    <img src="images/shivamcqsec.png">
+                    <h3>Shivam Mundyafe</h3>
+                    <p>Secretary</p>
                 </div>
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/aryancqjsec.png">
+                    <h3>Aryan Zingade</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/adhyacqjsec.png">
+                    <h3>Adhya Khandelwal</h3>
+                    <p>Joint Secretary </p>
                 </div>
             
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/saumyacqsjec.png">
+                    <h3>Saumya Pandey</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/rutujajsec.png">
+                    <h3>Rutuja Jadhav</h3>
+                    <p>Joint Secretary</p>
                 </div>
             
             </div>
