--- a/ed.html
+++ b/ed.html
@@ -52,39 +52,34 @@
         <p>Supercore paving the pathway for the student council</p>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
-                </div>
-                <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
+                    <img src="images/divijsec.png">
+                    <h3>Divij Khekale</h3>
+                    <p>Secretary</p>
                 </div>
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/khadijahjsec.png">
+                    <h3>Khadijah Syed</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/simranjsec.png">
+                    <h3>Simran Lamba</h3>
+                    <p>Joint Secretary</p>
                 </div>
             
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/shivanijsec.png">
+                    <h3>Shivani Singh</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/nishantjsec.png">
+                    <h3>Nishant Mhatre</h3>
+                    <p>Joint Secretary</p>
                 </div>
             
             </div>
