--- a/sport.html
+++ b/sport.html
@@ -54,39 +54,39 @@
         <p>Supercore paving the pathway for the student council</p>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
+                    <img src="images/dhruvasec.png">
+                    <h3>Dhruva Poojary</h3>
+                    <p>Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/Poorva Chadha_General Secretary.jpeg">
-                    <h3>Poorva Chadha</h3>
-                    <p>General Secretary</p>
+                    <img src="images/ritikajsec.png">
+                    <h3>Ritika Rai</h3>
+                    <p>Secretary</p>
                 </div>
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/harshjsec.png">
+                    <h3>Harsh Kanakia</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/prathamjsec.png">
+                    <h3>Pratham Vasa</h3>
+                    <p>Joint Secretary</p>
                 </div>
             
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/rachna.png">
-                    <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span>Technicals</span></p>
+                    <img src="images/vedashreejsec.png">
+                    <h3>Vedashree Shetye</h3>
+                    <p>Joint Secretary</p>
                 </div>
                 <div class="facility-col">
-                    <img src="images/sehaj2.png">
-                    <h3>Sehaj Bhalla</h3>
-                    <p>Joint General Secretary <span>Logistics & Admin</span></p>
+                    <img src="images/akshaysec.png">
+                    <h3>Akshay Kumar</h3>
+                    <p>Joint Secretary</p>
                 </div>
             
             </div>
