--- a/course.html
+++ b/course.html
@@ -27,7 +27,7 @@
         </nav>
             <h1>Editorial Calendar</h1>
     </section>
-    <section class="about-us">
+    <section class="about-us2">
         <script src="https://apps.elfsight.com/p/platform.js" defer></script>
         <div class="elfsight-app-4964b128-952c-4edc-91f8-711ca1dbe884"></div>
     </section>
