--- a/tech.html
+++ b/tech.html
@@ -66,7 +66,7 @@
                 <div class="facility-col">
                     <img src="images/suhani.png">
                     <h3>Suhani Jain</h3>
-                    <p>Joint Secretary <span>/span></p>
+                    <p>Joint Secretary </p>
                 </div>
             
             </div>
