ye saari nights

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="campus">
         <h1>Festivals</h1>
         <p>Fests at our college</p>
-            <div class="row">
+            <div class="row5">
                 <div class="campus-col">
                     <img src="images/sattva.png">
                     <a href="sattva.html">
@@ -59,6 +59,16 @@
                     <a href="taqneeq.html">
                     <div class="layer1">
                         <h3>Taqneeq</h3>
+                    </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row5">
+                <div class="campus-col">
+                    <img src="images/TEP.png">
+                    <a href="sattva.html">
+                    <div class="layer1">
+                        <h3>The Editorial Project</h3>
                     </div>
                     </a>
                 </div>
