--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row5">
                 <div class="campus-col">
                     <img src="images/TEP.png">
-                    <a href="sattva.html">
+                    <a href="tep.html">
                     <div class="layer1">
                         <h3>The Editorial Project</h3>
                     </div>
