iet logo update

--- a/iet.html
+++ b/iet.html
@@ -43,7 +43,7 @@
                     <a href="" class="hero-btn red-btn">Register for Executive</a>
                 </div>
                 <div class="about-col">
-                    <img src="images/iet.png">
+                    <img src="images/ietpurpal.png">
                 </div>
             </div>    
         </section>
