enactus and munsoc

--- a/editorialcomms.html
+++ b/editorialcomms.html
@@ -41,18 +41,10 @@
                 </a>
             </div>
             <div class="campus-col1">
-                <img src="images/findrome.png">
-                <a href="Findrome.html">
+                <img src="images/MUNSOC_LOGO_TRANSPARENT_1.png">
+                <a href="munsoc.html">
                 <div class="layer1">
-                    <h3>Findrome</h3>
-                </div>
-                </a>
-            </div>
-            <div class="campus-col1">
-                <img src="images/iet.png">
-                <a href="iet.html">
-                <div class="layer1">
-                    <h3>IET</h3>
+                    <h3>MUN Society</h3>
                 </div>
                 </a>
         </div>
