--- a/rc.html
+++ b/rc.html
@@ -58,7 +58,7 @@
             </div>
             <div class="row5">
                 <div class="facility-col">
-                    <img src="images/Anant Misra_Research Cell_Joint Secretary.png">
+                    <img src="images/Anant Misra1.png">
                     <h3>Anant Misra</h3>
                     <p>Joint Secretary</p>
                 </div>
