--- a/socialworkcomms.html
+++ b/socialworkcomms.html
@@ -41,10 +41,10 @@
                 </a>
             </div>
             <div class="campus-col1">
-                <img src="images/findrome.png">
-                <a href="Findrome.html">
+                <img src="images/enactus.png">
+                <a href="enactus.html">
                 <div class="layer1">
-                    <h3>Findrome</h3>
+                    <h3>Enactus</h3>
                 </div>
                 </a>
             </div>
