--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-      apiKey: "AIzaSyCPPt4oaJwB2tGO35Ia9-5kPUlEPhTUjLI",
-      authDomain: "councilwebsite-913db.firebaseapp.com",
-      projectId: "councilwebsite-913db",
-      storageBucket: "councilwebsite-913db.appspot.com",
-      messagingSenderId: "584818809679",
-      appId: "1:584818809679:web:24908544d33d749e5d033a",
-      measurementId: "G-FEV6NCL3ME"
+      apiKey: "AIzaSyAOXvbTy4SXDemp3IXC9j8S0vRpTBKAUv0",
+      authDomain: "councilwe.firebaseapp.com",
+      projectId: "councilwe",
+      storageBucket: "councilwe.appspot.com",
+      messagingSenderId: "591629847965",
+      appId: "1:591629847965:web:c71c267316c3c280633374",
+      measurementId: "G-BGKN49BG5S"
     };
   
     // Initialize Firebase
