--- a/cq.html
+++ b/cq.html
@@ -30,18 +30,12 @@
             <div class="row">
                 <div class="about-col">
                     <h1>Our Vision</h1>     
-                    <p>When it comes to talking numbers and matters of money, nobody does it better than us. Colloquium, The Business and Management Cell of the Students’ Council, aims towards collaborating with the corporate world while acclimating the team to enter the professional arena. Partnering with the biggest of banks, brands and tech giants like OnePlus, ICICI Bank, Starbucks, Axis Bank, NSDL, LinkedIn, Snapchat and Ebay are just specks in a plethora of achievements we boast here at Colloquium. 
-                        We believe in the ethos of “If work isn’t fun, you’re not playing on the right team”. Helping students become more confident, knowledgeable and marketable, and providing them with opportunities to create long-lasting relationships with like-minded individuals has always been at the top of our list. 
-                        
-                         </p>
+                    <p>Colloquium is the business and management committee of MPSTME, NMIMS. It provides students with a forum for student-industry interaction and exposes them to best industry practices by conducting national level events and conferences. It envisions to groom and prepare students to face the corporate world and enhance their skills via comprehensive workshops and trainings. Colloquium aims to spread across the entrepreneurial realm in college while ensuring a fun learning experience. It focuses on helping students network with leaders of today’s corporate world, to help them morph into leaders of tomorrow. Furthermore, It helps them develop soft skills which are quintessential for success in any field like communication skills, team work, empathy etc. Furthermore, it helps them develop soft skills which are quintessential for success in any field like communication skills, team work, empathy etc. Students walk out with enhanced skills, confidence and fond memories that stay etched in heart forever.
                     <h1>Flagship Events</h1>     
                     <p><b>Stockraze</b> Learning how to trade on the stock market or brushing up on your Warren Buffet-like investing skills, Stockraze is a pseudo stock market simulation which gives young participants a platform to gain exposure about the financial markets and investing with a competitive curve. As an introduction to Stockraze 5.0, we set in the excitement with a pre-event inspired by the Wolf of Wall Street. Stockraze has partnered with the likes of ICICI Lombard, Axis Bank and NSDL in previous editions. 
                         <b>Bizzneeti</b> is a National Level Business Planning Competition. It is listed among the top ten of its kind in India. Bizzneeti seeks to provide budding entrepreneurs a chance to showcase their business savvy and startup ideas to a panel of angel investors with the opportunity to battle it out to see whether their ideas have got what it takes to sustain in the real world.
                         <b>LinkedIn Workshop</b>An official workshop in collaboration with LinkedIn India. It reverberates the importance of professional networking and setting an online presence in a digital space for future headhunters and recruitments. Last year's workshop was the grandest one yet, graced by the presence of our speaker Mr. Aman Dhattarwal.
-                       
-                        <b>TalkFest</b> on the 10th of every month, the Editorial Board brings you a new pioneer in the world of art and literature via an interactive Q&A.
-                        Crossfire Debate Conference: wherein we simulate riveting debates on the latest and greatest in the world, ranging from discussions about human rights, to political affairs.
-                        </p>
+                    </p>
                     <a href="" class="hero-btn red-btn">Register for Executive</a>
                 </div>
                 <div class="about-col">
