--- a/cq.html
+++ b/cq.html
@@ -23,7 +23,7 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>Colloqium</h1>  
+            <h1>Colloquium</h1>  
         </section>
  
         <section class="about-us">
