change in hangout spots

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   
     </section>
-    <section class="campus">
+    <section class="campus2">
         <h1>Hangout Spots</h1>
             <div class="row6">
                 <div class="campus-col1">
