--- a/index.html
+++ b/index.html
@@ -62,8 +62,24 @@
                     </div>
                     </a>
                 </div>
+                <div class="campus-col">
+                    <img src="images/bizneeti white.png">
+                    <a href="bizneeti.html">
+                    <div class="layer1">
+                        <h3>Bizneeti</h3>
+                    </div>
+                    </a>
+                </div>
             </div>
             <div class="row5">
+                <div class="campus-col">
+                    <img src="images/conquerwhite.png">
+                    <a href="conquer.html">
+                    <div class="layer1">
+                        <h3>Conquer</h3>
+                    </div>
+                    </a>
+                </div>
                 <div class="campus-col">
                     <img src="images/TEP.png">
                     <a href="tep.html">
@@ -79,8 +95,8 @@
                         <h3>Social Conclave</h3>
                     </div>
                     </a>
+                 </div>
             </div>
-
   
     </section>
     <section class="campus2">
