linked all pages to socials

--- a/team.html
+++ b/team.html
@@ -124,8 +124,8 @@
 <section class="footer">
     <h4>About Us</h4>
     <div class="icons">
-        <a href=""><i class="fa fa-instagram"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/students.council.mpstme/"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/student-council-mpstme/"><i class="fa fa-linkedin"></i></a>
         
     </div>
 </section>    
