--- a/4c.html
+++ b/4c.html
@@ -23,7 +23,7 @@ login<html>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>IET</h1>  
+            <h1>4C</h1>  
         </section>
  
         <section class="about-us">
@@ -53,11 +53,11 @@ login<html>
 <section class="footer">
     <h4>About Us</h4>
     <div class="icons">
-        <a href=""><i class="fa fa-instagram"></i></a>
-        <a href=""><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.instagram.com/students.council.mpstme/"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/company/student-council-mpstme/"><i class="fa fa-linkedin"></i></a>
         
     </div>
-</section>     
+</section>    
 
   
 <!----JavaScript for toggle menu---->
