--- a/financecomms.html
+++ b/financecomms.html
@@ -49,10 +49,10 @@
                 </a>
             </div>
             <div class="campus-col1">
-                <img src="images/iet.png">
-                <a href="iet.html">
+                <img src="images/4c.png">
+                <a href="4c.html">
                 <div class="layer1">
-                    <h3>IET</h3>
+                    <h3>4C</h3>
                 </div>
                 </a>
         </div>
