--- a/technicalcomms.html
+++ b/technicalcomms.html
@@ -90,10 +90,10 @@
 
     <div class="row5">
         <div class="campus-col1">
-            <img src="images/iec.png">
-            <a href="iec.html">
+            <img src="images/kosmos.png">
+            <a href="kosmos.html">
                 <div class="layer1">
-                <h3>IEC</h3>
+                <h3>kosmos</h3>
                 </div>
             </a>
         </div>
