--- a/kosmos.html
+++ b/kosmos.html
@@ -1,4 +1,4 @@
-login<html>
+<html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>University Website Design - Easy Tutorials</title>
@@ -23,26 +23,31 @@ login<html>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-            <h1>4C</h1>  
+            <h1>IEC</h1>  
         </section>
  
         <section class="about-us">
             <div class="row">
                 <div class="about-col">
                     <h1>Our Vision</h1>     
-                    <p>We at 4C - The Marketing Cell of MPSTME, under the NMIMS Deemed-to-be-University embarked on this journey back in 2008, with one collective vision in our minds - To Collect, Connect, Commence, and Contest in the rapidly evolving Marketing world, as depicted in our name. 
-                        As a committee,we organize marketing-related events that are a perfectly proportionate mix of fun and learning. In addition to this, we regularly conduct seminars and industry workshops which help in providing hands-on knowledge to the students that assist them in honing their practical skills and nurturing their marketing mindset.
-                    </p>                         
+                    <p>To help in the development of India's innovation and entrepreneurial ecosystem.
+                        Providing a platform to the innovators of India to interact, debate and find sustainable solutions.
+                        Enlightening and inspiring, by creating a culture of interaction between young students and aspiring entrepreneurs, mentors, angel investors, corporates and so on.
+                        To provide opportunities to students for entrepreneurial skill development, helping them understand how to overcome challenges and risks.
+                        To provide a platform for transforming existing ideas into potential businesses
+                        
+                         </p>
                     <h1>Flagship Events</h1>     
-                    <p>
-                        Wings and Roots <br>
-                        Genesis <br>
-                        Emphoria<br>
+                    <p><b>Life Of an Entrepreneur</b>
+                        A thought-provoking session for the students of MPSTME understand the Entrepreneurial Lifecycle  from the co-founders of different startups. 
+                        <b>Time Capsule</b>
+                        A fun activity wherein over 300 students wrote a letter to their future selves. These letters were returned to the students at the end of the academic year. The motive behind this was to boost their morale and bring in them a sense of accomplishment
+
                     </p>
                     <a href="" class="hero-btn red-btn">Register for Executive</a>
                 </div>
                 <div class="about-col">
-                    <img src="images/4c.png">
+                    <img src="images/iec.png">
                 </div>
             </div>    
         </section>
@@ -56,7 +61,7 @@ login<html>
         <a href="https://www.linkedin.com/company/student-council-mpstme/"><i class="fa fa-linkedin"></i></a>
         
     </div>
-</section>    
+</section>       
 
   
 <!----JavaScript for toggle menu---->
