--- a/financecomms.html
+++ b/financecomms.html
@@ -41,6 +41,15 @@
                 </a>
             </div>
             <div class="campus-col1">
+                <img src="images/iec.png">
+                <a href="iec.html">
+                <div class="layer1">
+                    <h3>IEC</h3>
+                </div>
+                </a>
+        </div>
+        <div class="row5">
+            <div class="campus-col1">
                 <img src="images/findrome.png">
                 <a href="Findrome.html">
                 <div class="layer1">
