--- a/financecomms.html
+++ b/financecomms.html
@@ -48,6 +48,9 @@
                 </div>
                 </a>
         </div>
+    </section>
+    <section class="campus1">
+
         <div class="row5">
             <div class="campus-col1">
                 <img src="images/findrome.png">
