--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     
     <section class="campus">
-        <h1>Festivals</h1>
-        <p>Fests at our college</p>
+        <h1>Flagship Events</h1>
+        <p>Hosted by the several student chapters</p>
             <div class="row5">
                 <div class="campus-col">
                     <img src="images/sattva.png">
