--- a/technicalcomms.html
+++ b/technicalcomms.html
@@ -29,7 +29,7 @@
     
 <!------- about us content -------->
 <section class="campus1">
-    <h1>Students’ Council Bodies</h1>
+    <h1>Technical Student Chapters</h1>
     <p>Committees</p>
         <div class="row5">
             <div class="campus-col1">
