--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             <img src="images/sportcomms-modified.png">
             <a href="sportcomms.html">
             <div class="layer1">
-                <h3>Sport Committees</h3>
+                <h3>Sports</h3>
             </div>
             </a>
         </div>
