--- a/team.html
+++ b/team.html
@@ -97,7 +97,7 @@
                 <div class="facility-col">
                     <img src="images/rachnafinal.png">
                     <h3>Rachna Shetty</h3>
-                    <p>Joint General Secretary <span><br><br>[Technicals]</span></p>
+                    <p>Joint General Secretary <span><br><br>[Technical]</span></p>
                 </div>
                 <div class="facility-col">
                     <img src="images/sehaj2.png">
