linking all mails

--- a/cq.html
+++ b/cq.html
@@ -51,6 +51,10 @@
                     <img src="images/shivamcqsec.png">
                     <h3>Shivam Mundyafe</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: shivam.mundyafe026@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
+
+
                 </div>
             </div>
             <div class="row5">
@@ -58,11 +62,15 @@
                     <img src="images/aryancqjsec.png">
                     <h3>Aryan Zingade</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: aryan.zingade001@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/adhyacqjsec.png">
                     <h3>Adhya Khandelwal</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: adhya.khandelwal065@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -71,11 +79,15 @@
                     <img src="images/saumyacqsjec.png">
                     <h3>Saumya Pandey</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: saumya.pandey063@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/rutujajsec.png">
                     <h3>Rutuja Jadhav</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: rutuja.jadhav132@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
