--- a/cul.html
+++ b/cul.html
@@ -53,11 +53,15 @@
                     <img src="images/ananya.png">
                     <h3>Ananya Tyagi</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: ananya.tyagi146@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/khushank.png">
                     <h3>Rusik Patel</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: rusik.bhalodia05@nmims.edu.in "style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
@@ -65,11 +69,15 @@
                     <img src="images/shekhar.png">
                     <h3>Shekhar Ojha</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: chandrashekhar.ojha64@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/parth.png">
                     <h3>Parth Tendulkar</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: parth.tendulkar89@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -78,11 +86,15 @@
                     <img src="images/neeharika.png">
                     <h3>Neeharika Bose</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: neeharika.bose054@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/aayush.png">
                     <h3>Aayush Mhanmunkar</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: aayush.mhamunkar056@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
