--- a/ed.html
+++ b/ed.html
@@ -55,6 +55,8 @@
                     <img src="images/divijsec.png">
                     <h3>Divij Khekale</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: divij.khekale013@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
@@ -62,11 +64,15 @@
                     <img src="images/khadijahjsec.png">
                     <h3>Khadijah Syed</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: khadijah.syed087@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/simranjsec.png">
                     <h3>Simran Lamba</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: harsimrankaur.lamba051@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -75,11 +81,15 @@
                     <img src="images/shivanijsec.png">
                     <h3>Shivani Singh</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: shivani.singh162@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/nishantjsec.png">
                     <h3>Nishant Mhatre</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: nishant.mhatre018@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
