--- a/rc.html
+++ b/rc.html
@@ -54,6 +54,8 @@
                     <img src="images/ArushiRai_ResearchCell_Secretary.JPG">
                     <h3>Arushi Rai</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: arushi.rai110@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
@@ -61,11 +63,15 @@
                     <img src="images/Anant Misra1.png">
                     <h3>Anant Misra</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: anant.misra003@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/Rishita Mantri_Research Cell_Joint Secretary.PNG">
                     <h3>Rishita Mantri</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: rishita.mantri375@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -73,12 +79,16 @@
                 <div class="facility-col">
                     <img src="images/Bhagyashree Birje_Research Cell_Joint Secretary.PNG">
                     <h3>Bhagyashree Birje</h3>
-                    <p>Joint Secretary <span></span></p>
+                    <p>Joint Secretary </p>
+                    <p><a href = "mailto: bhagyashree.birje010@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/chetan.png">
                     <h3>Chetan Yadav</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: chetan.yadav090@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
