--- a/sport.html
+++ b/sport.html
@@ -57,11 +57,15 @@
                     <img src="images/dhruvasec.png">
                     <h3>Dhruva Poojary</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: dhruva.poojary10@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/ritikajsec.png">
                     <h3>Ritika Rai</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: ritika.raj282@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
@@ -69,11 +73,15 @@
                     <img src="images/harshjsec.png">
                     <h3>Harsh Kanakia</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: harsh.kanakia005@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/prathamjsec.png">
                     <h3>Pratham Vasa</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: pratham.vasa046@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -82,11 +90,15 @@
                     <img src="images/vedashreejsec.png">
                     <h3>Vedashree Shetye</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: vedashree.shetye138@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/akshaysec.png">
                     <h3>Akshay Kumar</h3>
                     <p>Joint Secretary</p>
+                    <p><a href = "mailto: akshay.skumar048@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
