--- a/tech.html
+++ b/tech.html
@@ -50,23 +50,31 @@
                     <img src="images/diya.png">
                     <h3>Diya Hirani</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: diya.hirani32@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/ishaan.png">
                     <h3>Ishaan Mehta</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: ishaan.mehta09@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
                 <div class="facility-col">
                     <img src="images/yash.png">
                     <h3>Yash Shah</h3>
-                    <p>Joint  Secretary <span></span></p>
+                    <p>Joint  Secretary </p>
+                    <p><a href = "mailto: yash.shah033@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/suhani.png">
                     <h3>Suhani Jain</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: "style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
@@ -74,12 +82,16 @@
                 <div class="facility-col">
                     <img src="images/nidhi.png">
                     <h3>Nidhi Keni</h3>
-                    <p>Joint Secretary <span></span></p>
+                    <p>Joint Secretary </p>
+                    <p><a href = "mailto: nidhikeni098@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/tanishka.png">
                     <h3>Tanishkaa Chaturvedi</h3>
-                    <p>Joint Secretary <span></span></p>
+                    <p>Joint Secretary </p>
+                    <p><a href = "mailto: tanishkaa.chaturvedi102@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
             </div>
