--- a/si.html
+++ b/si.html
@@ -54,30 +54,40 @@
             <div class="row5">
                 <div class="facility-col">
                     <img src="images/SunandanDasgupta_SocialImpact_Secretary.jpg">
-                    <h3>Sunandan Dasgupta Chadha</h3>
+                    <h3>Sunandan Dasgupta</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: sunandan.dasgupta11@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/Jai Yadav_Social Impact_Secretary.JPG">
                     <h3>Jai Yadav</h3>
                     <p>Secretary</p>
+                    <p><a href = "mailto: jai.yadav050@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             </div>
             <div class="row5">
                 <div class="facility-col">
                     <img src="images/aashir.png">
                     <h3>Aashir Ibrahim</h3>
-                    <p>Joint Secretary <span></span></p>
+                    <p>Joint Secretary </p>
+                    <p><a href = "mailto: Mohammedaashir.peringady216@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/Khushank Jain_Social Impact_Joint Secretary.JPG">
                     <h3>Khushank Jain</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: khushank.jain009@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
                 <div class="facility-col">
                     <img src="images/AmishiDesai_SocialImpact_Jsec.jpg">
                     <h3>Amishi Desai</h3>
                     <p>Joint Secretary </p>
+                    <p><a href = "mailto: amishi.desai023@nmims.edu.in"style="color:#ff0000; text-decoration:none" >Contact</a>
+                    </p>
                 </div>
             
     </section>
