--- a/conquer.html
+++ b/conquer.html
@@ -50,21 +50,21 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png">
+                    <img src="images/SOCCER.png">
                     <div class="layer1">
-                        <h3>Concerts</h3>
+                        <h3>Football</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png">
+                    <img src="images/BASKETBALL.png">
                     <div class="layer1">
-                        <h3>Performing Arts</h3>
+                        <h3>Basketball</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png">
+                    <img src="images/RUNNING.png">
                     <div class="layer1">
-                        <h3>Informals</h3>
+                        <h3>Racing</h3>
                     </div>
                 </div>
                 
