--- a/tep.html
+++ b/tep.html
@@ -50,21 +50,21 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png">
+                    <img src="images/singer.png">
                     <div class="layer1">
                         <h3>Concerts</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png">
+                    <img src="images/datewbooks.png">
                     <div class="layer1">
-                        <h3>Performing Arts</h3>
+                        <h3>Blind Date</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png">
+                    <img src="images/talk.png">
                     <div class="layer1">
-                        <h3>Informals</h3>
+                        <h3>Talk</h3>
                     </div>
                 </div>
                 
