--- a/sattva.html
+++ b/sattva.html
@@ -50,19 +50,19 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png">
+                    <img src="images/concertking.png">
                     <div class="layer1">
                         <h3>Concerts</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png">
+                    <img src="images/mr&mrs.png">
                     <div class="layer1">
-                        <h3>Performing Arts</h3>
+                        <h3>Mr & Mrs Sattva</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png">
+                    <img src="images/informalssattva.png">
                     <div class="layer1">
                         <h3>Informals</h3>
                     </div>
