--- a/taqneeq.html
+++ b/taqneeq.html
@@ -74,21 +74,21 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/london.png">
+                    <img src="images/shamani.png">
                     <div class="layer1">
-                        <h3>Concerts</h3>
+                        <h3>The Talk</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/newyork.png">
+                    <img src="images/d2c.png">
                     <div class="layer1">
-                        <h3>Performing Arts</h3>
+                        <h3>Dare 2 Compile</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/washington.png">
+                    <img src="images/internshipfair.png">
                     <div class="layer1">
-                        <h3>Informals</h3>
+                        <h3>Internship Fair</h3>
                     </div>
                 </div>
                 
