--- a/blog.html
+++ b/blog.html
@@ -34,10 +34,16 @@
         <div class="comment-box">
             <h3>Leave a question</h3>
             <form class="comment-form">
-                    <input type="text" placeholder="Enter Name">
-                    <input type="email" placeholder="Enter NMIMS email">
-                    <textarea rows="5" placeholder="Your Comment"></textarea>
-                    <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
+                <form action="mail.php" method="post">
+                    <label for="name">Your Name</label>
+                    <input type="text"  name="name" placeholder="Your name..">
+                    <label for="lname">Email</label>
+                    <input type="email"  name="email" placeholder="Your email..">
+                   
+                    <label for="message">Message</label>
+                    <textarea  name="message" placeholder="Write something.." style="height:200px"></textarea>
+                    <input type="submit" value="Submit">
+                  </form>
             </form>
         </div>
     </div>
